test/programs/valid/class_structure/package.java
package dovs.joos.features;

protected class A {
  public A() {}
  protected int x;
}

