test/programs/invalid/types/double.java
protected class A {
  protected double x;
}

